--- a/templates/map.html
+++ b/templates/map.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>jQuery UI Draggable - Default functionality</title>
+  <title>Cambridge Map</title>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -30,8 +30,8 @@
 
 <div id='maplegend' class='maplegend'
     style='position: absolute; z-index:9999; border:2px solid grey; background-color:rgba(255, 255, 255, 0.8);
-     border-radius:6px; padding: 10px; font-size:14px; right: 20px; bottom: 20px;'>
-    <svg>{{SVG}}</svg>
+     border-radius:6px; padding-bottom: 10px; font-size:14px; right: 20px; bottom: 20px;'>
+    <div>{{SVG}}</div>
 </div>
 
 </body>
