--- a/templates/map.html
+++ b/templates/map.html
@@ -30,7 +30,7 @@
 
 <div id='maplegend' class='maplegend'
     style='position: absolute; z-index:9999; border:2px solid grey; background-color:rgba(255, 255, 255, 1);
-     border-radius:6px; padding-bottom: 10px; font-size:14px; right: 20px; bottom: 20px;'>
+     border-radius:6px; padding-bottom: 10px; font-size:14px; right: 20px; top: 20px;'>
     <div>{{SVG}}</div>
 </div>
 
